--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-navigation": "^1.0.0-beta.27",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "xxhashjs": "^0.2.1"
   },
   "devDependencies": {
