--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/samples": "^2.0.2",
+    "@shoutem/fetch-token-intercept": "^0.2.2",
     "expo": "^25.0.0",
     "native-base": "^2.3.10",
     "react": "16.2.0",
