--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
+    "jest-cli": "^22.4.3",
+    "jest-environment-node": "^22.4.3",
     "jest-expo": "23.0.0"
   }
 }
